--- a/src/blog/templates/blog/base.html
+++ b/src/blog/templates/blog/base.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <header>
-    {% include 'blog/menu.html' %}
+    {% include 'blog/components/menu.html' %}
 </header>
 <body>
 <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
@@ -138,7 +138,7 @@
     </div>
 </main>
 <footer class="py-5 text-center text-body-secondary bg-body-tertiary">
-    {% include 'blog/footer.html' %}
+    {% include 'blog/components/footer.html' %}
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
