--- a/src/blog/static/assets/css/blog.css
+++ b/src/blog/static/assets/css/blog.css
@@ -225,3 +225,10 @@ h1, h2, h3, h4, h5, h6 {
     justify-content: space-between;
 }
 /*-----Author------*/
+
+
+/*-----ContactUs------*/
+.contact_us {
+    height: none;
+}
+/*-----ContactUs------*/
