--- a/src/blog/templates/blog/contactus_form.html
+++ b/src/blog/templates/blog/contactus_form.html
@@ -1,15 +1,47 @@
-{% extends 'blog/base.html' %}
-{% block title %}
-{{ title }}
-{% endblock %}
-{% block content%}
+<!doctype html>
+{% load static %}
+<html lang="en" data-bs-theme="auto">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% if account_created %}
+    <meta http-equiv="refresh" content="2 ;url={% url 'account:login' %}">
+    {% endif %}
+    <title>{% block title %}{% endblock %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'assets/css/blog.css' %}"/>
+    <link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap"
+          rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+</head>
+{% include 'blog/components/menu.html'%}
+<body>
 <div class="text-center">
     <br>
-    <form action="{% url 'blog:contact_us' %}" method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-        <br>
-    <button class="btn btn-lg btn-success">Сохранить</button>
-</form>
+    <div class="container_form contact_us">
+        <div class="form_body">
+            <form action="{% url 'blog:contact_us' %}" method="POST">
+                {% csrf_token %}
+                <div class="form_body_item">
+                    {{ form.name }}
+                    {{ form.email }}
+                    {{ form.subject }}
+                    {{ form.message }}
+                    <button class="form_body_item_btn btn  a_btn btn-outline-secondary">
+                        Send
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
-{% endblock%}
+<footer class="py-5">
+    {% include 'blog/components/footer.html' %}
+</footer>
+</div>
+</body>
+
